# applyforjobs

./: .devenv.flake.nix  .gitignore  README.md  deepseek-r1:1.5b:custom  deepseek-r1:14b:custom  deepseek-r1:32b:custom  devenv.nix  pyproject.toml  resume.md
.devenv/: load-exports  profile  run
.devenv/gc/: shell-1-link
src/applyforjobs/: constants.py  crew.py  main.py
src/applyforjobs/config/: agents.yaml  tasks.yaml
