[project]
name = "applyforjobs"
version = "0.1.0"
description = "applyforjobs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
applyforjobs = "applyforjobs.main:run"
run_crew = "applyforjobs.main:run"
train = "applyforjobs.main:train"
replay = "applyforjobs.main:replay"
test = "applyforjobs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
